borsh-derive/src/internals/deserialize/enum/snapshots/borsh_derive__internals__deserialize__r#enum__tests__borsh_discriminant_false.snap
---
source: borsh-derive/src/internals/deserialize/enum/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl borsh::de::BorshDeserialize for X {
    fn deserialize_reader<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        let tag = <u8 as borsh::de::BorshDeserialize>::deserialize_reader(reader)?;
        <Self as borsh::de::EnumExt>::deserialize_variant(reader, tag)
    }
}
impl borsh::de::EnumExt for X {
    fn deserialize_variant<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
        variant_tag: u8,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        let mut return_value = if variant_tag == 0u8 {
            X::A
        } else if variant_tag == 1u8 {
            X::B
        } else if variant_tag == 2u8 {
            X::C
        } else if variant_tag == 3u8 {
            X::D
        } else if variant_tag == 4u8 {
            X::E
        } else if variant_tag == 5u8 {
            X::F
        } else {
            return Err(
                borsh::__private::maybestd::io::Error::new(
                    borsh::__private::maybestd::io::ErrorKind::InvalidData,
                    borsh::__private::maybestd::format!(
                        "Unexpected variant tag: {:?}", variant_tag
                    ),
                ),
            )
        };
        Ok(return_value)
    }
}

