borsh-derive/src/internals/deserialize/enum/snapshots/borsh_derive__internals__deserialize__r#enum__tests__check_deserialize_with_attr.snap
---
source: borsh-derive/src/internals/deserialize/enum/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K: Ord, V> borsh::de::BorshDeserialize for C<K, V>
where
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
{
    fn deserialize_reader<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        let tag = <u8 as borsh::de::BorshDeserialize>::deserialize_reader(reader)?;
        <Self as borsh::de::EnumExt>::deserialize_variant(reader, tag)
    }
}
impl<K: Ord, V> borsh::de::EnumExt for C<K, V>
where
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
{
    fn deserialize_variant<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
        variant_tag: u8,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        let mut return_value = if variant_tag == 0u8 {
            C::C3(
                borsh::BorshDeserialize::deserialize_reader(reader)?,
                borsh::BorshDeserialize::deserialize_reader(reader)?,
            )
        } else if variant_tag == 1u8 {
            C::C4 {
                x: borsh::BorshDeserialize::deserialize_reader(reader)?,
                y: third_party_impl::deserialize_third_party(reader)?,
            }
        } else {
            return Err(
                borsh::__private::maybestd::io::Error::new(
                    borsh::__private::maybestd::io::ErrorKind::InvalidData,
                    borsh::__private::maybestd::format!(
                        "Unexpected variant tag: {:?}", variant_tag
                    ),
                ),
            )
        };
        Ok(return_value)
    }
}

