borsh-derive/src/internals/deserialize/enum/snapshots/borsh_derive__internals__deserialize__r#enum__tests__generic_borsh_skip_tuple_field.snap
---
source: borsh-derive/src/internals/deserialize/enum/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K: Key, V, U> borsh::de::BorshDeserialize for A<K, V, U>
where
    V: Value,
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
    U: core::default::Default,
{
    fn deserialize_reader<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        let tag = <u8 as borsh::de::BorshDeserialize>::deserialize_reader(reader)?;
        <Self as borsh::de::EnumExt>::deserialize_variant(reader, tag)
    }
}
impl<K: Key, V, U> borsh::de::EnumExt for A<K, V, U>
where
    V: Value,
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
    U: core::default::Default,
{
    fn deserialize_variant<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
        variant_tag: u8,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        let mut return_value = if variant_tag == 0u8 {
            A::B {
                x: borsh::BorshDeserialize::deserialize_reader(reader)?,
                y: borsh::BorshDeserialize::deserialize_reader(reader)?,
            }
        } else if variant_tag == 1u8 {
            A::C(
                borsh::BorshDeserialize::deserialize_reader(reader)?,
                core::default::Default::default(),
            )
        } else {
            return Err(
                borsh::__private::maybestd::io::Error::new(
                    borsh::__private::maybestd::io::ErrorKind::InvalidData,
                    borsh::__private::maybestd::format!(
                        "Unexpected variant tag: {:?}", variant_tag
                    ),
                ),
            )
        };
        Ok(return_value)
    }
}

